Project

General

Profile

Actions

Bug #14201

closed

Regression due to over optimization of hash splat

Bug #14201: Regression due to over optimization of hash splat

Added by marcandre (Marc-Andre Lafortune) almost 9 years ago. Updated almost 9 years ago.

Status:
Closed
Target version:
ruby -v:
2.5.0-rc1 & trunk
[ruby-core:84340]

Description

The following doesn't print anything nor raise anything in 2.5.0-rc1 or trunk:

$ ruby -e "{**puts('hello')}; 42"

It should be the same as in Ruby 2.0-2.4:

hello
-e:1:in `<main>': no implicit conversion of nil into Hash (TypeError)

Note: If you try to use the hash (e.g. passing as argument, storing in variable), then the correct behavior takes place. Found this bug through DeepCover's test suite.


Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #14459: Unexpected compile error in 2.5.0ClosedActions
Actions

Also available in: PDF Atom